force-app/main/default/objects/CB_Person__c/CB_Person__c.object-meta.xml
<CustomObject>
    <label>Person</label>
    <nameField>
        <label>Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>People</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>