force-app/main/default/objects/CB_Person__c/fields/Crunchbase_URL__c.field-meta.xml
<CustomField>
    <fullName>Crunchbase_URL__c</fullName>
    <label>Crunchbase URL</label>
    <type>Url</type>
</CustomField>