force-app/main/default/objects/CB_Person__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organization</label>
    <referenceTo>CB_Organization__c</referenceTo>
    <relationshipLabel>Persons</relationshipLabel>
    <relationshipName>Persons</relationshipName>
    <type>Lookup</type>
</CustomField>