force-app/main/default/objects/CB_Person__c/fields/Primary_Affiliation_Organization__c.field-meta.xml
<CustomField>
    <fullName>Primary_Affiliation_Organization__c</fullName>
    <label>Primary Affiliation Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>