force-app/main/default/objects/CB_Person__c/fields/Primary_Affiliation_Title__c.field-meta.xml
<CustomField>
    <fullName>Primary_Affiliation_Title__c</fullName>
    <label>Primary Affiliation Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>